--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = paulstoffregen/Encoder@^1.4.4
+lib_deps = 
+	paulstoffregen/Encoder@^1.4.4
+	adafruit/Adafruit MPU6050@^2.2.6
